--- a/src/app/home/login-form/login-form.component.html
+++ b/src/app/home/login-form/login-form.component.html
@@ -14,7 +14,8 @@
       Enter your password
     </div>
   </div>
-  <a href="#">Forgot Password?</a><br>
+  <a [routerLink]="['resend', 'password']">Forgot Password?</a><br>
+  <a [routerLink]="['resend', 'activation']">Resend Activation Link?</a><br>
 
   <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">
     Login <fa name="spinner" animation="spin" *ngIf="pending"></fa>
