--- a/src/app/console/navigation/navigation.component.html
+++ b/src/app/console/navigation/navigation.component.html
@@ -19,5 +19,10 @@
       </li>
 
     </ul>
+    <ul class="navbar-nav pull-right">
+      <li class="nav-item">
+        <a (click)="onLogout()" class="nav-link" style="cursor: pointer"><fa name="sign-out"></fa> Logout</a>
+      </li>
+    </ul>
   </div>
 </nav>
